tests/error/ptr_ref_prim.gw
// [contains] cannot declare/instantiate references (@) of primitive type
typedef void (my_func)(int @i){}
